# PreciseRoIPooling

./: .vim-template:.cpp  .vim-template:.py  README.md  build.py  travis.sh
pytorch/prroi_pool/: functional.py  setup.py  travis.sh
pytorch/prroi_pool/src/: prroi_pooling_gpu.c  prroi_pooling_gpu_impl.cuh
pytorch/prroi_pooling/: __init__.py  functional.py  prroi_pooling.py
pytorch/prroi_pooling/_prroi_pooling/: __init__.py
pytorch/prroi_pooling/src/: prroi_pooling_gpu.c  prroi_pooling_gpu.cpp  prroi_pooling_gpu_impl.cu
pytorch/tests/: .test_prroi_pooling2d.py.swp  test_prroi_pooling2d.py
src/: prroi_pooling_gpu_impl.cu  prroi_pooling_gpu_impl.cuh
tensorflow/prroi_pool/: CMakeLists.txt  __init__.py  precise_roi_pooling_ops.py
tensorflow/prroi_pool/src/kernels/: build_cuda.py  precise_roi_pooling.h  precise_roi_pooling_kernels.cc  precise_roi_pooling_kernels.cu.cc
tensorflow/prroi_pool/src/ops/: precise_roi_pooling_ops.cc
tensorflow/tests/: precise_roi_pooling_ops_test.py
tensorflow/tests/test_binaries/2_2_0.5/: features.npy  gradients0.npy  gradients1.npy  real_outputs.npy  rois.npy
